adicionado funcionalidade para criar um novo usuário (adiministrador)
